manifests/cluster-addons/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qbittorrent
